Updated NEMO notebooks

--- a/NEMO_MMB_profiledata.ipynb
+++ b/NEMO_MMB_profiledata.ipynb
@@ -42,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This web server has restricted access; it's only accessible from the UW APL subdomain.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {},
